# jhu_capstone

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  README.md  hello.py  main.py  ml_monitor.py  ml_monitor_cc.py  ml_monitor_gps.py  ml_monitor_lidar.py  pyproject.toml  requirements.txt
3D printed parts/: v4 Plate A.stl  v4 Plate B.stl  v4 Plate C with LiDAR Mount.stl  v4 Plate C.stl  v4 Spacer.stl
Development Environment/: README.md  setup2.sh
Raspberry Pi/: README.md  startup_commands.txt
attack_logs/: 2024-12-01_17-05-56_data.csv  2024-12-01_20-00-12_data.csv  2024-12-05_12-14-25_data.csv  2024-12-05_12-16-18_data.csv  2024-12-05_12-20-08_data.csv  2024-12-05_12-25-53_data.csv  2024-12-05_13-41-55_data.csv  2024-12-05_13-42-26_data.csv  2024-12-05_13-43-46_data.csv  2024-12-05_13-44-15_data.csv  2024-12-09_18-13-22_data.csv  2024-12-09_18-15-03_data.csv  2024-12-09_19-04-54_data.csv  2024-12-09_20-17-57_data.csv  2024-12-09_20-18-43_data.csv  2024-12-10_08-30-06_data.csv  2024-12-10_08-44-34_data.csv  2024-12-10_08-45-41_data.csv  2024-12-10_08-47-31_data.csv  2025-01-06_16-24-28_data.csv  2025-01-06_16-36-00_data.csv  2025-01-06_16-44-05_data.csv  2025-01-06_16-46-04_data.csv  2025-01-06_16-48-16_data.csv
autonomous_uas/: __init__.py  vehicle.py
benign_real_data/: 2024-11-27_12-46-20_data.csv  2024-11-27_12-49-09_data.csv  2024-11-27_12-59-30_data.csv  2024-11-27_13-01-37_data.csv  2024-11-27_13-01-42_data.csv  2024-11-27_13-03-59_data.csv  2024-12-07_17-06-27_data.csv
drone_ips/: __init__.py
environment/: environment-setup.sh
logs/: 2024-11-20_11-24-04_data.csv  2024-11-20_22-03-34_data.csv  2024-11-21_09-43-05_data.csv  2024-12-01_17-03-43_data.csv  2024-12-01_20-01-11_data.csv  2024-12-01_20-20-27_data.csv  2024-12-01_20-22-16_data.csv  2024-12-01_20-22-49_data.csv  2024-12-05_04-19-03_data.csv  2024-12-05_06-17-50_data.csv  2024-12-05_06-21-12_data.csv  2024-12-05_06-32-33_data.csv  autonomous_uas_log.json  (+6 more)
remote_id/: CMakeLists.txt  README.md  collision.py  new_scheme.c
(+35 files in other folders)
